cabal-version: 3.4

name: unleash-client-haskell
version: 0.4.4
description:
    This is an [Unleash](https://www.getunleash.io/) client SDK for Haskell.

    'Unleash.Client' provides a stateful HTTP client with functions and types for:

        - Client configuration
        - Client registration
        - Fetching feature toggles
        - Fetching variants
        - Sending metrics

    See [the source repo](https://github.com/finn-no/unleash-client-haskell) for more information and example usage.
author: FINN.no
copyright: Copyright © FINN.no AS, Inc. All rights reserved.
extra-source-files:
    README.md

common all
    build-depends:
        base >=4.7 && <5,
        record-dot-preprocessor,
        record-hasfield
    default-extensions:
        BlockArguments
        DeriveFoldable
        DeriveFunctor
        DeriveTraversable
        DerivingStrategies
        LambdaCase
        OverloadedStrings
        RankNTypes
        ScopedTypeVariables
    ghc-options:
        -O2
        -W
        -Wno-unused-top-binds
        -Wredundant-constraints
        -Wunused-packages
        -haddock
        -F -pgmF=record-dot-preprocessor
    default-language: Haskell2010

library
    import: all
    exposed-modules:
        Unleash.Client,
    other-modules:
        Unleash.Internal.HttpClient
        Paths_unleash_client_haskell
    hs-source-dirs: src
    build-depends:
        aeson,
        containers,
        http-client-tls,
        http-media,
        mtl,
        servant,
        servant-client,
        text,
        time,
        unleash-client-haskell-core,

executable example
    import: all
    main-is: Main.hs
    hs-source-dirs: example
    build-depends:
        mtl,
        servant-client,
        text,
        unleash-client-haskell,
        unleash-client-haskell-core,
        unliftio
